objects/CC_OO_PlantHolidayCalendar__c.object
<CustomObject>
    <fields>
        <fullName>cc_oo_HolidayType__c</fullName>
        <label>Holiday Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Holiday__c</fullName>
        <label>Holiday</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cc_oo_IsNotWeekend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Not Weekend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cc_oo_Month__c</fullName>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Plant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Plant</label>
        <referenceTo>ccrz__E_Seller__c</referenceTo>
        <relationshipLabel>CC OO Plant Holiday Calendar</relationshipLabel>
        <relationshipName>CC_OO_Plant_Holiday_Calendar</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc_oo_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_dwChecksum__c</fullName>
        <label>dwChecksum</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>CC OO Plant Holiday Calendar</label>
    <nameField>
        <label>CC OO Plant Holiday Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC OO Plant Holiday Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>